@@ -3,6 +3,8 @@ FreeIPMI 1.1.1 - XX/XX/11
 o Support new --sdr-cache-file option specify specific SDR cache file
   in all tools.
 o Update libfreeipmi for DCMI 1.5 additions.
+o Update libfreeipmi fru-parse sub-library to support FRU parsing
+  without an IPMI connection.
 o Fix macro name typos.
 
 FreeIPMI 1.0.6 - 09/01/11
